--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -1,48 +1,7 @@
-{% load staticfiles %}
+{% extends "competitions/competition.html" %}
 {% load bootstrap3 %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>ScriptNet Document Understanding Competitions</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-
-    <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
-
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/sfikas.css' %}" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
-				<div class="col-lg-8">
+{% block content %}
 		            <form enctype="multipart/form-data" action="" method="post" role="form">
 		                {% csrf_token %}
 		                {% bootstrap_form submit_form %}
@@ -50,13 +9,4 @@
 		                <button class="btn btn-default" type="submit" name="submit">Submit result</button>
                         {% endbuttons %}
 		            </form>					
-                </div>
-				<div class="col-lg-4">
-		    		<img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
-				</div>
-            </div>
-        </div>
-    </section>
-</body>
-
-</html>
+{% endblock %}
