--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -60,7 +60,7 @@
                   <ul class="dropdown-menu">
 				          {% for subtr in tr.subtrack_set.all %}
 				          <li>
-  					        <a id="t{{ tr.id }}_{{ subtr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}/{{ subtr.id }}/submit">Subtrack {{ tr.id }}.{{ subtr.id }} </a>
+  					        <a id="t{{ tr.id }}_{{ subtr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}/{{ subtr.id }}">Subtrack {{ tr.id }}.{{ subtr.id }} </a>
 	  			        </li>
 				          {% endfor %}
                   </ul>
@@ -93,7 +93,7 @@
         </div>
         
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <h1>{{ competition.name }}</h1>
                 <p class="lead">
                     {% block content %}
@@ -103,24 +103,19 @@
         					</header>					
         					{{ track.overview | safe }}
         					{% if subtrack %}		
-        						<div class="wrapper wrapper-style2">
-        						<article>
-        							Subtrack {{ track.id }}.{{ subtrack.id }}
-      							<ul>
-      							<li>Download data</li>
-        							<!-- This has to change definitely -- looks too ugly -->
-        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/submit"> Submit method </a></li>
-        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/viewresults"> View results </a></li>-->
+                                <h3>Subtrack {{ track.id }}.{{ subtrack.id }} - {{ subtrack.name }}</h3>
+                                <ul>    
+      							    <li>Download data</li>
+        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/submit"> Submit a new method for evaluation</a></li>
+        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/viewresults"> View results for all available methods</a></li>
       							</ul>
-        						</article>
-        						</div>						
         					{% else %}
                                 {% if track.subtrack_set.all %}
-                                <h3> Choose a subtrack to submit a new method or view the scoreboard: </h3>
+                                <h3> Please choose one of the available subtracks: </h3>
                                     <ul>
                                     {% for subtr in track.subtrack_set.all %}
                                     <li> Subtrack {{ track.id }}.{{ subtr.id }}: 
-                                        <a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtr.id }}/submit">{{ subtr.name }}</a> 
+                                        <a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtr.id }}">{{ subtr.name }}</a> 
                                         </li>
                                     {% endfor %}
                                     </ul>
@@ -135,7 +130,7 @@
                 </p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="well">
                     <h4>News</h4>
 				          	{{ competition.newsfeed | safe }}
