--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ScriptNet Document Understanding Competitions</title>
+    <title>{% trans "ScriptNet Document Understanding Competitions" %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
@@ -51,32 +52,40 @@
                     <span class="icon-bar"></span>
                 </button>
                 {% if user.is_authenticated %}
-                <a class="navbar-brand page-scroll" href="#page-top"><small><small>Logged in as &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
-                <a class="navbar-brand page-scroll" href="{% url 'signout' %}"><small><small>[Logout]</small></small></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><small><small>{% trans "Logged in as" %} &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
+                <a class="navbar-brand page-scroll" href="{% url 'signout' %}"><small><small>{% trans "[Logout]" %}</small></small></a>
                 {% else %}
-                <a class="navbar-brand page-scroll" href="#page-top"><small>Welcome to</small> ScriptNet </a>
+                <a class="navbar-brand page-scroll" href="#page-top"><small>{% trans "Welcome to" %}</small> ScriptNet </a>
                 {% endif %}
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">                    
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">{% trans "About" %} </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Competitions</a>
+                        <a class="page-scroll" href="#services">{% trans "Competitions" %}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#register">Register</a>
+                        <a class="page-scroll" href="#register">{% trans "Register" %}</a>
                     </li>
                     {% if not user.is_authenticated %}
                     <li>
-                        <a class="page-scroll" href="#login">Login</a>
+                        <a class="page-scroll" href="#login">{% trans "Login" %}</a>
                     </li>
                     {% endif %}                    
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">{% trans "Contact" %}</a>
                     </li>
+					<li>
+				{% get_current_language as LANGUAGE_CODE %}
+				<form action="{% url 'set_language' %}" method="post" id="language_switcher">
+					<input name="next" type="hidden" value="{{ request.path }}" />
+					{% csrf_token %}
+					{% bootstrap_form language_form %}
+				</form>
+				</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -89,8 +98,8 @@
             <div class="header-content-inner">
                 <h1>ScriptNet</h1>
                 <hr>
-                <p>ScriptNet is a platform of competitions running under the READ project</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>{% trans "ScriptNet is a platform of competitions running under the READ project" %}</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">{% trans "Find Out More" %}</a>
             </div>
         </div>
     </header>
@@ -100,7 +109,7 @@
             <div class="row">
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
 		<div class="col-lg-8">
-                    <h2 class="section-heading">About ScriptNet</h2>
+                    <h2 class="section-heading">{% trans "About ScriptNet" %}</h2>
                     <h4 class="section-heading">De Bello Gallico</h4>
                     <!-- <hr class="light"> -->
                     <p class="text-faded">
@@ -135,7 +144,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Active Document Understanding Competitions</h2>
+                    <h2 class="section-heading">{% trans "Active Document Understanding Competitions" %}</h2>
 					<br><br><br><br><br><br><br>
                     <!-- <hr class="primary"> -->
                 </div>
@@ -163,7 +172,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
                 </div>
 				{% endfor %}
 				{% else %}
-				<p> *No competitions are currently active*
+				<p> {% trans "*No competitions are currently active*" %}
 				{% endif %}
             </div>
 		</div>
@@ -178,8 +187,8 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
                     <img src="{% static 'img/nicesamples/3.jpg' %}" class="img-responsive" alt="">
                 </div>
 		        <div class="col-lg-8">
-                    <h2 class="section-heading">Register</h2>
-                    <p class="text-faded">Register to take part in one of the active competitions.</p>
+                    <h2 class="section-heading">{% trans "Register" %}</h2>
+                    <p class="text-faded">{% trans "Register to take part in one of the active competitions." %}</p>
                     <!-- Το ονομα του action αναφερεται στους regexp ορισμους των urls.py -->
 		            <form action="" method="post" role="form">
 		                {% csrf_token %}
@@ -198,14 +207,14 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
         <div class="container">
             <div class="row">
 		        <div class="col-lg-8">
-                    <h2 class="section-heading">Sign in</h2>
-                    <p class="text-faded">Login with your credentials if you have already registered.</p>
+                    <h2 class="section-heading">{% trans "Sign in" %}</h2>
+                    <p class="text-faded">{% trans "Login with your credentials if you have already registered." %}</p>
                     <!-- Το ονομα του action αναφερεται στους regexp ορισμους των urls.py -->
 		            <form action="" method="post" role="form">
 		                {% csrf_token %}
 		                {% bootstrap_form login_form %}
                         {% buttons %}
-		                <button class="btn btn-default" type="submit" name="login">Login</button>
+		                <button class="btn btn-default" type="submit" name="login">{% trans "Login" %}</button>
                         {% endbuttons %}
 		            </form>
                 </div>
@@ -221,14 +230,14 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact</h2>
+                    <h2 class="section-heading">{% trans Contact %}</h2>
                     <hr class="primary">
 			<br><br><br><br><br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
                 			<img src="{% static 'img/logos/ncsrd.jpg' %}" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
-				NCSR "Demokritos"
+				 NCSR "Demokritos
 				</div>
 			</div>
 			<br>
@@ -236,7 +245,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 				<div class="col-lg-6 vcenter">
                 			<img src="{% static 'img/logos/iit_logo.png' %}" width="30%" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
-				Institute of Informatics and Telecommunications
+				{% trans "Institute of Informatics and Telecommunications" %}
 				</div>
 			</div>
 			<br>
@@ -244,7 +253,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 				<div class="col-lg-6 vcenter">
                 			<img src="{% static 'img/logos/cil_logo.jpg' %}" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
-				Computational Intelligence Laboratory
+				{% trans "Computational Intelligence Laboratory" %}
 				</div>
 			</div>
 			<br>
@@ -252,7 +261,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 				<div class="col-lg-6 vcenter">
                 			<img src="{% static 'img/logos/read_logo.png' %}" width="50%" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
-				READ project
+				{% trans "READ project" %}
 				</div>
 			</div>
 			<br><br><br><br><br><br><br>
