--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -104,8 +104,12 @@
         					{{ track.overview | safe }}
         					{% if subtrack %}		
                                 <h3>Subtrack {{ track.id }}.{{ subtrack.id }} - {{ subtrack.name }}</h3>
-                                <ul>    
-      							    <li>Download data</li>
+                                <ul>
+                                    {% if subtrack.public_data_external %}
+                                    <li><a href="{{ subtrack.public_data_external }}">Download training set</a></li>
+                                    {% else %}
+      							    <li><a href="{{ subtrack.public_data.url }}">Download training set</a></li>
+                                    {% endif %}
         							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/submit"> Submit a new method for evaluation</a></li>
         							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/viewresults"> View results for all available methods</a></li>
       							</ul>
