--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -42,9 +42,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'competition' %}#services">ScriptNet</a>
-            </div>
+                </button>            
+                {% if user.is_authenticated %}
+                <a class="navbar-brand" href="{% url 'competition' %}#services"><small><small>Logged in as &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
+                <!--<a class="navbar-brand" href="{% url 'signout' %}"><small><small>[Logout]</small></small></a>
+                -->
+                {% else %}
+                <a class="navbar-brand" href="{% url 'competition' %}#services">ScriptNet</a>>
+                {% endif %}            
+            </div>                
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
