Submission creates an object, and complains if a same-name method already exists. Redirected to empty-form submit page or the viewresults page while showing an appropriate error

--- a/scriptnet/competitions/templates/competitions/viewresults.html
+++ b/scriptnet/competitions/templates/competitions/viewresults.html
@@ -3,5 +3,9 @@
 
 {% block content %}
 <h3>Scoreboard for the [{{ track.id }}.{{ subtrack.id }}]{{ track.name }}/{{ subtrack.name }} track</h3>
-<p>There are no submissions and no assigned benchmarks for this subtrack yet!</p>
+{% if message %}
+<br><br><center><h4>{{ message }}</h4></center>
+{% else %}
+    <p>There are no submissions and no assigned benchmarks for this subtrack yet!</p>
+{% endif %}
 {% endblock %}
