--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -2,7 +2,11 @@
 {% load bootstrap3 %}
 
 {% block content %}
+{% if message %}
+<br><br><center><h4>{{ message }}</h4></center>
+{% else %}
 <h3>New submission to the [{{ track.id }}.{{ subtrack.id }}]{{ track.name }}/{{ subtrack.name }} track</h3>
+{% endif %}
 {% if user.is_authenticated %}
 <form enctype="multipart/form-data" action="" method="post" role="form">
 {% csrf_token %}
