--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -16,7 +16,7 @@
     <title>{% trans "ScriptNet Document Understanding Competitions" %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.transparence.css' %}" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -91,7 +91,7 @@
 					{% get_language_info_list for LANGUAGES as languages %}
 					{% for language in languages %}
 							<ul>						   	
-							<button type="button"
+							<button type="submit"
 									class="btn btn-link btn-xs"
 						            name="language"
 						            value="{{ language.code }}"
