--- a/scriptnet/competitions/templates/competitions/viewresults.html
+++ b/scriptnet/competitions/templates/competitions/viewresults.html
@@ -9,8 +9,12 @@
 
 {% block content %}
 <h3>Scoreboard for the [{{ track.id }}.{{ subtrack.id }}]{{ track.name }}/{{ subtrack.name }} track</h3>
-{% if message %}
-    <br><br><center><h4>{{ message }}</h4></center>
+{% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
 {% endif %}
     
 {% if subtrack.submission_set.all %}
