--- a/scriptnet/competitions/static/css/flag-icon.css
+++ b/scriptnet/competitions/static/css/flag-icon.css
@@ -474,11 +474,11 @@
 .flag-icon-ga.flag-icon-squared {
   background-image: url(../flags/1x1/ga.svg);
 }
-.flag-icon-gb {
-  background-image: url(../flags/4x3/gb.svg);
+.flag-icon-en {
+  background-image: url(../flags/4x3/en.svg);
 }
-.flag-icon-gb.flag-icon-squared {
-  background-image: url(../flags/1x1/gb.svg);
+.flag-icon-en.flag-icon-squared {
+  background-image: url(../flags/1x1/en.svg);
 }
 .flag-icon-gd {
   background-image: url(../flags/4x3/gd.svg);
