Adding missing flag

--- a/scriptnet/competitions/static/css/flag-icon.css
+++ b/scriptnet/competitions/static/css/flag-icon.css
@@ -348,11 +348,11 @@
 .flag-icon-cy.flag-icon-squared {
   background-image: url(../flags/1x1/cy.svg);
 }
-.flag-icon-cz {
-  background-image: url(../flags/4x3/cz.svg);
+.flag-icon-cs {
+  background-image: url(../flags/4x3/cs.svg);
 }
-.flag-icon-cz.flag-icon-squared {
-  background-image: url(../flags/1x1/cz.svg);
+.flag-icon-cs.flag-icon-squared {
+  background-image: url(../flags/1x1/cs.svg);
 }
 .flag-icon-de {
   background-image: url(../flags/4x3/de.svg);
@@ -366,11 +366,11 @@
 .flag-icon-dj.flag-icon-squared {
   background-image: url(../flags/1x1/dj.svg);
 }
-.flag-icon-dk {
-  background-image: url(../flags/4x3/dk.svg);
+.flag-icon-da {
+  background-image: url(../flags/4x3/da.svg);
 }
-.flag-icon-dk.flag-icon-squared {
-  background-image: url(../flags/1x1/dk.svg);
+.flag-icon-da.flag-icon-squared {
+  background-image: url(../flags/1x1/da.svg);
 }
 .flag-icon-dm {
   background-image: url(../flags/4x3/dm.svg);
@@ -546,11 +546,11 @@
 .flag-icon-gq.flag-icon-squared {
   background-image: url(../flags/1x1/gq.svg);
 }
-.flag-icon-gr {
-  background-image: url(../flags/4x3/gr.svg);
+.flag-icon-el {
+  background-image: url(../flags/4x3/el.svg);
 }
-.flag-icon-gr.flag-icon-squared {
-  background-image: url(../flags/1x1/gr.svg);
+.flag-icon-el.flag-icon-squared {
+  background-image: url(../flags/1x1/el.svg);
 }
 .flag-icon-gs {
   background-image: url(../flags/4x3/gs.svg);
