--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -258,14 +258,14 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">{% trans Contact %}</h2>
+                    <h2 class="section-heading">{% trans "Contact" %}</h2>
                     <hr class="primary">
 			<br><br><br><br><br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
                 			<img src="{% static 'img/logos/ncsrd.jpg' %}" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
-				 NCSR "Demokritos
+				 {% trans "NCSR 'Demokritos'" %}
 				</div>
 			</div>
 			<br>
