--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>            
+                </button>
                 {% if user.is_authenticated %}
                 <a class="navbar-brand" href="{% url 'competition' %}#services"><small><small>Logged in as &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
                 <!--<a class="navbar-brand" href="{% url 'signout' %}"><small><small>[Logout]</small></small></a>
@@ -69,7 +69,7 @@
                   <ul class="dropdown-menu">
 				          {% for subtr in tr.subtrack_set.all %}
 				          <li>
-  					        <a id="t{{ tr.percomp_uniqueid }}_{{ subtr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}/{{ subtr.id }}">Subtrack {{ tr.percomp_uniqueid }}.{{ subtr.id }} </a>
+  					        <a id="t{{ tr.percomp_uniqueid }}_{{ subtr.pertrack_uniqueid }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}/{{ subtr.pertrack_uniqueid }}">Subtrack {{ tr.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }} </a>
 	  			        </li>
 				          {% endfor %}
                   </ul>
@@ -109,11 +109,11 @@
                     {% block content %}
         				{% if track %}
         					<header>
-          					<h1> {% trans "Track" %}{{ track.percomp_uniqueid }} - {{ track.name }} </h1>
+          					<h1> {% trans "Track" %} {{ track.percomp_uniqueid }} - {{ track.name }} </h1>
         					</header>					
         					{{ track.overview | safe }}
         					{% if subtrack %}		
-                                <h3>Subtrack {{ track.percomp_uniqueid }}.{{ subtrack.id }} - {{ subtrack.name }}</h3>
+                                <h3>Subtrack {{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }} - {{ subtrack.name }}</h3>
                                 <ul>
                                     {% if subtrack.public_data_external %}
                                     <li><a href="{{ subtrack.public_data_external }}">{% trans "Download training set" %}</a></li>
@@ -121,19 +121,19 @@
       							    <li><a href="{{ subtrack.public_data.url }}">{% trans "Download training set" %}</a></li>
                                     {% endif %}
                                     {% if user.is_authenticated %}
-        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.id }}/submit">{% trans "Submit a new method for evaluation" %}</a></li>
+        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.pertrack_uniqueid }}/submit">{% trans "Submit a new method for evaluation" %}</a></li>
                                     {% else %}
                                     <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to" %} <a href="{% url 'competition' %}#login">{% trans "login" %}</a>{% trans "first" %})</li>
                                     {% endif %}
-        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.id }}/viewresults">{% trans "View results for all available methods" %}</a></li>
+        							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.pertrack_uniqueid }}/viewresults">{% trans "View results for all available methods" %}</a></li>
       							</ul>
         					{% else %}
                                 {% if track.subtrack_set.all %}
                                 <h3> Please choose one of the available subtracks: </h3>
                                     <ul>
                                     {% for subtr in track.subtrack_set.all %}
-                                    <li> Subtrack {{ track.percomp_uniqueid }}.{{ subtr.id }}: 
-                                        <a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtr.id }}">{{ subtr.name }}</a> 
+                                    <li> Subtrack {{ track.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }}: 
+                                        <a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtr.pertrack_uniqueid }}">{{ subtr.name }}</a> 
                                         </li>
                                     {% endfor %}
                                     </ul>
