Adds ICFHR14 organizers as users, and fixes a small bug

--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -186,7 +186,7 @@
 				<article class="box"> <!-- Used to reference also box-style2, this is nowhere to be found -->
                     <!-- TODO: Fix this, it gives a 404 
 					<span class="image-left circle-image">
-                        <img src="{{ organotes.avatar.url }}" width="100%" />
+                    {#    <img src="{{ organotes.avatar.url }}" width="100%" />    #}
                     </span> -->
 					<h3 class="inlinify"><a href="mailto:{{ organotes.user.email }}">
                         {{ organotes.user.first_name }} {{ organotes.user.last_name }}
