Handle all remaining strings with i18n

--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -1,5 +1,7 @@
 {% extends "competitions/competition.html" %}
+{% load i18n %}
 {% load bootstrap3 %}
+
 
 {% block content %}
 {% if messages %}
@@ -9,17 +11,17 @@
     </div>
     {% endfor %}
 {% else %}
-<h3>New submission to the [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }} track</h3>
+<h3>{% trans "New submission to the" %} [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }} {% trans "track" %}</h3>
 {% endif %}
 {% if user.is_authenticated %}
 <form enctype="multipart/form-data" action="" method="post" role="form">
 {% csrf_token %}
 {% bootstrap_form submit_form %}
 {% buttons %}
-    <button class="btn btn-default" type="submit" name="submit">Submit method results</button>
+    <button class="btn btn-default" type="submit" name="submit">{% trans "Submit method results" %}</button>
 {% endbuttons %}
 </form>					
 {% else %}
-<br><br><center><h4> You have to <a href="{% url 'competition' %}#login">login</a> first. </h4></center>
+<br><br><center><h4> {% trans "You have to" %} <a href="{% url 'competition' %}#login">{% trans "login </a> first" %}. </h4></center>
 {% endif %}
 {% endblock %}
