--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'competition' %}#services"><small><small>Logged in as &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
+                <a class="navbar-brand" href="{% url 'competition' %}#services"><small><small>{% trans "Logged in as" %} &nbsp;</small></small>{{ user.first_name }} {{ user.last_name }} </a>
                 <!--<a class="navbar-brand" href="{% url 'signout' %}"><small><small>[Logout]</small></small></a>
                 -->
                 {% else %}
@@ -62,14 +62,14 @@
 			          </li>
 			          {% for tr in competition.track_set.all %}
                 <li class="dropdown" id="t1{{ tr.percomp_uniqueid }}">
-                  <a href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}" style="display:inline-block;padding-right:0px;">Track {{ tr.percomp_uniqueid }}</a>
+                  <a href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}" style="display:inline-block;padding-right:0px;">{% trans "Track" %} {{ tr.percomp_uniqueid }}</a>
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#myTools"  style="display:inline-block;padding-left:0px;">
                     <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
 				          {% for subtr in tr.subtrack_set.all %}
 				          <li>
-  					        <a id="t{{ tr.percomp_uniqueid }}_{{ subtr.pertrack_uniqueid }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}/{{ subtr.pertrack_uniqueid }}">Subtrack {{ tr.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }} </a>
+  					        <a id="t{{ tr.percomp_uniqueid }}_{{ subtr.pertrack_uniqueid }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}/{{ subtr.pertrack_uniqueid }}">{% trans "Subtrack" %} {{ tr.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }} </a>
 	  			        </li>
 				          {% endfor %}
                   </ul>
@@ -113,7 +113,7 @@
         					</header>					
         					{{ track.overview | safe }}
         					{% if subtrack %}		
-                                <h3>Subtrack {{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }} - {{ subtrack.name }}</h3>
+                                <h3>{% trans "Subtrack" %} {{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }} - {{ subtrack.name }}</h3>
                                 <ul>
                                     {% if subtrack.public_data_external %}
                                     <li><a href="{{ subtrack.public_data_external }}">{% trans "Download training set" %}</a></li>
@@ -123,22 +123,22 @@
                                     {% if user.is_authenticated %}
         							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.pertrack_uniqueid }}/submit">{% trans "Submit a new method for evaluation" %}</a></li>
                                     {% else %}
-                                    <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to" %} <a href="{% url 'competition' %}#login">{% trans "login" %}</a>{% trans "first" %})</li>
+                                    <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to" %} <a href="{% url 'competition' %}#login">{% trans "login </a> first" %})</li>
                                     {% endif %}
         							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtrack.pertrack_uniqueid }}/viewresults">{% trans "View results for all available methods" %}</a></li>
       							</ul>
         					{% else %}
                                 {% if track.subtrack_set.all %}
-                                <h3> Please choose one of the available subtracks: </h3>
+                                <h3> {% trans "Please choose one of the available subtracks" %}: </h3>
                                     <ul>
                                     {% for subtr in track.subtrack_set.all %}
-                                    <li> Subtrack {{ track.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }}: 
+                                    <li> {% trans "Subtrack" %} {{ track.percomp_uniqueid }}.{{ subtr.pertrack_uniqueid }}: 
                                         <a href="{% url 'competition' %}{{ competition.id }}/{{ track.percomp_uniqueid }}/{{ subtr.pertrack_uniqueid }}">{{ subtr.name }}</a> 
                                         </li>
                                     {% endfor %}
                                     </ul>
                                 {% else %}
-                                <h3> There are no available subtracks for the current track. </h3>
+                                <h3> {% trans "There are no available subtracks for the current track" %}. </h3>
                                 {% endif %}
                             {% endif %}
           				{% else %}
@@ -175,7 +175,7 @@
         <div class="row">
         <div class="col-md-5"></div>
         <div class="col-md-2">
-            <h3>Organizers</h3>
+            <h3>{% trans "Organizers" %}</h3>
         </div>
         <div class="col-md-5"></div>        
         </div>
