--- a/scriptnet/competitions/templates/competitions/viewresults.html
+++ b/scriptnet/competitions/templates/competitions/viewresults.html
@@ -1,5 +1,6 @@
 {% extends "competitions/competition.html" %}
 {% load staticfiles %}
+{% load i18n %}
 {% load bootstrap3 %}
 {% load django_tables2 %}
 
@@ -8,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h3>Scoreboard for the [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }} track</h3>
+<h3>{% trans "Scoreboard for the" %} [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }} {% trans "track" %}</h3>
 {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">
@@ -20,7 +21,7 @@
 {% if subtrack.submission_set.all %}
     {% render_table table %}
 {% else %}
-    <p>There are no submissions and no assigned benchmarks for this subtrack yet!</p>
+    <p>{% trans "There are no submissions and no assigned benchmarks for this subtrack yet" %}!</p>
 {% endif %}
 
 {% endblock %}
