--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -7,7 +7,7 @@
 {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">
-        {{ message }} {{ message.tags}}
+        {{ message }}
     </div>
     {% endfor %}
 {% else %}
