--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -18,6 +18,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
+    <!-- Creative CSS This was used as a default in the master page -->
+    <link href="{% static 'css/creative.css' %}" rel="stylesheet">
+    
     <!-- Custom CSS -->
     <link href="{% static 'css/blog-post.css' %}" rel="stylesheet">
     <link href="{% static 'css/sfikas.css' %}" rel="stylesheet">
@@ -76,7 +79,7 @@
                 </li>                     
 			          {% endfor %}
 		          	<li>
-				          <a id="o" href="#Organizers">{% trans "Organizers" %}</a>
+				          <a id="o" href="#organizers">{% trans "Organizers" %}</a>
 			          </li>
 			   </ul>
             </div>
@@ -92,6 +95,7 @@
     <section id="main">
     <div class="container">
 
+        <!-- Necessary only if you dont load creative css
         <div class="row">
           &nbsp;
         </div>
@@ -100,7 +104,7 @@
         </div>
         <div class="row">
           &nbsp;
-        </div>
+        </div> -->
         
         <div class="row">
             <div class="col-lg-10">
@@ -143,6 +147,7 @@
                             {% endif %}
           				{% else %}
 					        {{ competition.overview | safe }}
+                            <a href="" class="btn btn-primary btn-xl">A button</a>
 				        {% endif %}
                     {% endblock %}
                 </p>
