Creates an empty scoreboard and skeleton code in models/Track/scoretable

--- a/scriptnet/competitions/templates/competitions/viewresults.html
+++ b/scriptnet/competitions/templates/competitions/viewresults.html
@@ -27,8 +27,9 @@
     </div>
     {% endfor %}
 {% endif %}
-    
-{% if table %}
+
+<!-- TODO: Django tables2 apparently can handle the message for an empty table itself ('empty_text') --> 
+{% if table.rows %}
     {% render_table table %}
 {% else %}
     <p>{% trans "There are no submissions and no assigned benchmarks for this subtrack yet" %}!</p>
