--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -69,8 +69,8 @@
 			        {% for tr in competition.track_set.all %}
                 <li class="dropdown" id="t1{{ tr.percomp_uniqueid }}">
                   <a href="{% url 'competition' %}{{ competition.id }}/{{ tr.percomp_uniqueid }}" style="display:inline-block;padding-right:0px;">{% trans "Track" %} {{ tr.percomp_uniqueid }}</a>
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#myTools"  style="display:inline-block;padding-left:0px;">
-                    <b class="caret"></b>
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#subtracks"  style="display:inline-block;padding-left:0px;">
+                    <b class="caret"></b> <!-- This caret shows a wrong url sometimes, but probably doesnt matter -->
                   </a>
                   <ul class="dropdown-menu">
 				          {% for subtr in tr.subtrack_set.all %}
